# frappe-oidc-extended

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
oidc_extended/: __init__.py  callback.py  hooks.py  modules.txt
oidc_extended/config/: desktop.py  docs.py
oidc_extended/oidc_extended/doctype/oidc_default_role/: oidc_default_role.json  oidc_default_role.py
oidc_extended/oidc_extended/doctype/oidc_default_role_profile/: oidc_default_role_profile.json  oidc_default_role_profile.py
oidc_extended/oidc_extended/doctype/oidc_extended_configuration/: oidc_extended_configuration.js  oidc_extended_configuration.json  oidc_extended_configuration.py  test_oidc_extended_configuration.py
oidc_extended/oidc_extended/doctype/oidc_fallback_role_profile/: oidc_fallback_role_profile.json  oidc_fallback_role_profile.py
oidc_extended/oidc_extended/doctype/oidc_group_to_module_mapping/: oidc_group_to_module_mapping.json  oidc_group_to_module_mapping.py
oidc_extended/oidc_extended/doctype/oidc_group_to_role_mapping/: oidc_group_to_role_mapping.json  oidc_group_to_role_mapping.py
oidc_extended/public/js/: user_oidc_warning.js
