[project]
name = "oidc_extended"
authors = [
    { name = "Mohammed Noureldin", email = "contact@mohammednoureldin.com"}
]
description = "An extension to the ERPNext Social Login authentication method (OIDC) that incorporates new features designed to meet the needs of enterprises."
readme = "README.md"

[tool.bench.frappe-dependencies]
frappe = "<=17.0.0-dev"
