[project]
name = "oidc_extended"
authors = [
    { name = "Mohammed Noureldin", email = "contact@mohammednoureldin.com"}
]
description = "An extension to the ERPNext Social Login authentication method (OIDC) that incorporates new features designed to meet the needs of enterprises."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[tool.bench.frappe-dependencies]
frappe = "<=17.0.0-dev"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
