[project]
name = "oidc_extended"
authors = [
    { name = "Mohammed Noureldin", email = "contact@mohammednoureldin.com" }
]
description = "An extension to the ERPNext Social Login authentication method (OIDC) that incorporates new features designed to meet the needs of enterprises."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[tool.bench.frappe-dependencies]
frappe = "<=17.0.0-dev"

# Dynamic versioning using Git tags
[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"

[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
